--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,9 +1,740 @@
 @import (inline) "normalize.css/normalize.css";
 
-@import "./presets/clearfix";
-@import "./presets/grid";
-@import "./presets/loop";
+html {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  color: #333;
+  height: 100%;
+}
 
 body {
-  background-color: azure;
+  background-color: #fff;
+  line-height: 14px;
+  height: 100%;
+}
+
+html, body, .page {
+  width: 100%;
+}
+
+.index-menu {
+  margin: 2rem 4rem;
+  font-size: 1.25rem;
+  background-color: #177ee6;
+  color: #fff;
+  padding: 2rem 4rem;
+  border-radius: .5em;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .5);
+
+  & a {
+    text-decoration: underline;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  & li {
+    margin-bottom: 10px;
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.page {
+  overflow-x: hidden;
+}
+
+.wrapper {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.header {
+  height: 82px;
+  background: linear-gradient(to bottom, #002f73, #035aaa);
+  color: #fff;
+  margin-bottom: 60px;
+
+  & > .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+  }
+
+  &__logo {
+    width: 192px;
+    height: 51px;
+    background: url('../images/logo.png') no-repeat center;
+  }
+
+  &__desc {
+    margin-left: 20px;
+    line-height: 18px;
+  }
+
+  &-left {
+    display: flex;
+    align-items: center;
+  }
+
+  &-right {
+
+    & > span {
+      font-size: 18px;
+      color: #ff9819;
+    }
+  }
+}
+
+.button {
+  width: 300px;
+  height: 40px;
+  display: inline-block;
+  vertical-align: top;
+  border: none;
+  background: #177ee6;
+  color: #fff;
+  border-radius: 6px;
+  font-weight: bold;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .25);
+  padding: 13px 10px 10px;
+  text-align: center;
+  outline: none;
+  margin: 0 5px 10px;
+  transition: .3s;
+
+  &:hover {
+    cursor: pointer;
+    background-color: #3399ff;
+  }
+
+  &[disabled] {
+    background-color: #e1e3e6;
+    color: #999;
+
+    &:hover {
+      cursor: default;
+      background-color: #e1e3e6;
+    }
+  }
+}
+
+.block {
+  margin-bottom: 30px;
+}
+
+.form {
+
+  &-control {
+    display: inline-block;
+    vertical-align: top;
+    width: 300px;
+    min-height: 86px;
+    margin: 0 5px 10px;
+    padding-top: 24px;
+    position: relative;
+
+    & > .form-control:first-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__label {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+
+  &__input {
+    width: 100%;
+    height: 36px;
+    display: block;
+    border: 2px solid #c2c7cc;
+    border-radius: 6px;
+    background: #fff;
+    padding: 0 18px;
+    outline: none;
+    transition: .3s;
+
+    &:focus {
+      border-color: #177ee6;
+    }
+
+    &:hover {
+      background-color: #f7f9fa;
+    }
+
+    &[disabled] {
+      background-color: #e1e3e6;
+
+      &:hover {
+        cursor: default;
+      }
+
+      & + .form__label {
+        color: #999;
+      }
+    }
+
+    & ~ span {
+      display: block;
+      color: #f25618;
+      margin-top: 10px;
+      opacity: 0;
+      transition: .3s;
+    }
+
+    &.err {
+      border-color: #f25618;
+
+      & ~ span {
+        opacity: 1;
+      }
+    }
+
+    &[type="radio"] {
+      display: none;
+
+      & + .form__label {
+        position: relative;
+        left: auto;
+        top: auto;
+        padding-left: 34px;
+        min-height: 34px;
+        display: flex;
+        align-items: center;
+
+        &:before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: ~"calc(50% - 12px)";
+          width: 20px;
+          height: 20px;
+          border: 2px solid #c2c7cc;
+          border-radius: 100%;
+          transition: .3s;
+        }
+
+        &:after {
+          content: '';
+          position: absolute;
+          left: 7px;
+          top: ~"calc(50% - 5px)";
+          width: 10px;
+          height: 10px;
+          background-color: #177ee6;
+          border-radius: 100%;
+          opacity: 0;
+          transition: .3s;
+        }
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      &:checked + .form__label {
+        font-weight: bold;
+
+        &:before {
+          border-color: #177ee6;
+        }
+
+        &:after {
+          opacity: 1;
+        }
+      }
+
+      &:disabled + .form__label {
+        color: #999;
+
+        &:hover {
+          cursor: default;
+        }
+      }
+    }
+
+    &[type="checkbox"] {
+      display: none;
+
+      & + .form__label {
+        position: relative;
+        left: auto;
+        top: auto;
+        padding-left: 34px;
+        min-height: 34px;
+        display: flex;
+        align-items: center;
+
+        &:before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: ~"calc(50% - 12px)";
+          width: 20px;
+          height: 20px;
+          border: 2px solid #c2c7cc;
+          border-radius: 6px;
+          transition: .3s;
+        }
+
+        &:after {
+          content: '';
+          position: absolute;
+          left: 5px;
+          top: ~"calc(50% - 7px)";
+          width: 14px;
+          height: 14px;
+          background: data-uri('../images/svg/check.svg') no-repeat center;
+          background-size: 14px;
+          opacity: 0;
+          transition: .3s;
+        }
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      &:checked + .form__label {
+        font-weight: bold;
+
+        &:before {
+          border-color: #177ee6;
+          background-color: #177ee6;
+        }
+
+        &:after {
+          opacity: 1;
+        }
+      }
+
+      &:disabled + .form__label {
+        color: #999;
+
+        &:hover {
+          cursor: default;
+        }
+      }
+    }
+
+    &[type="file"] {
+
+      & ~ span {
+        opacity: 1;
+        color: #999;
+        font-style: italic;
+      }
+
+      &[disabled] ~ .jfilestyle.jfilestyle-corner  {
+        background-color: #e1e3e6;
+
+        & .focus-jfilestyle label {
+          background-color: #e1e3e6;
+          color: #999;
+
+          &:hover {
+            cursor: default;
+          }
+        }
+      }
+    }
+
+    &.calendar {
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &.show {
+        border-color: #177ee6;
+      }
+    }
+  }
+
+  &__select {
+
+    &[disabled] {
+
+      & ~ .form__label {
+        color: #999;
+      }
+    }
+  }
+
+  &-count {
+    width: 136px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid #c2c7cc;
+    border-radius: 6px;
+    background: #fff;
+    outline: none;
+
+    &__button {
+      width: 32px;
+      height: 100%;
+      display: block;
+      background: transparent no-repeat center;
+      background-size: 12px;
+      border: none;
+      outline: none;
+      transition: .3s;
+
+      &[data-action="minus"] {
+        background-image: data-uri('../images/svg/minus.svg');
+      }
+
+      &[data-action="plus"] {
+        background-image: data-uri('../images/svg/plus.svg');
+      }
+
+      &:hover {
+        cursor: pointer;
+        background-color: #f7f9fa;
+      }
+    }
+
+    &__input {
+      width: 72px;
+      height: 100%;
+      border: none;
+      background: transparent;
+      text-align: center;
+      outline: none;
+    }
+
+    &.disabled {
+      background-color: #e1e3e6;
+
+      & + .form__label {
+        color: #999;
+      }
+
+      & .form-count__button[data-action="minus"] {
+        background-image: data-uri('../images/svg/minus-grey.svg');
+
+        &:hover {
+          cursor: default;
+          background-color: transparent;
+        }
+      }
+
+      & .form-count__button[data-action="plus"] {
+        background-image: data-uri('../images/svg/plus-grey.svg');
+
+        &:hover {
+          cursor: default;
+          background-color: transparent;
+        }
+      }
+    }
+  }
+}
+
+.calendar-icon {
+  position: absolute;
+  right: 12px;
+  top: 30px;
+  width: 24px;
+  height: 24px;
+  background: data-uri('../images/svg/calendar.svg') no-repeat center;
+  background-size: 100%;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.ui-selectmenu {
+
+  &-button {
+
+    &.ui-button {
+      width: 100%;
+      height: 36px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: row-reverse;
+      border: 2px solid #c2c7cc;
+      border-radius: 6px;
+      background: #fff;
+      padding: 0 18px;
+      outline: none;
+      transition: background-color .3s;
+
+      &:active, &:focus {
+        color: inherit;
+      }
+
+      &:hover {
+        background-color: #f7f9fa;
+      }
+
+      & .ui-selectmenu-icon {
+        float: none;
+        width: 12px;
+        height: 6px;
+        background: data-uri('../images/svg/arrow.svg') no-repeat center;
+        transition: .3s;
+      }
+
+      & .ui-selectmenu-text {
+        margin-right: 0;
+      }
+
+      &.ui-selectmenu-button-open {
+        border-radius: 6px 6px 0 0;
+        border-color: #177ee6;
+        border-bottom: none;
+        margin: 0;
+        font-size: 1rem;
+
+        & .ui-selectmenu-icon {
+          transform: rotate(180deg);
+        }
+      }
+
+      &.ui-selectmenu-disabled {
+        opacity: 1;
+        background-color: #e1e3e6;
+
+        & .ui-selectmenu-icon {
+          opacity: .2;
+        }
+      }
+    }
+  }
+
+  &-menu {
+    border: none;
+    outline: none;
+
+    & .ui-menu {
+      overflow: hidden;
+      padding-bottom: 0;
+      border-radius: 0 0 6px 6px;
+      border: 2px solid #177ee6;
+      border-top: none;
+      font-size: 1rem;
+      position: relative;
+
+      &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #c2c7cc;
+        z-index: 10;
+      }
+
+      & .ui-state-focus, & .ui-state-active {
+        margin: 0;
+      }
+
+      &-item {
+
+        & .ui-menu-item-wrapper {
+          padding: 12px 18px;
+          border: none;
+          background: #fff;
+
+          &.ui-state-active {
+            background: #3399ff;
+          }
+        }
+      }
+    }
+  }
+}
+
+.datepicker {
+  background-color: #177ee6;
+  color: #fff;
+  width: 300px;
+  border: none;
+
+  &--nav {
+    border-bottom: none;
+  }
+
+  &--nav-action, &--nav-title {
+
+    &:hover {
+      background: #fff;
+      color: #177ee6;
+
+      & i {
+        color: #177ee6;
+      }
+
+      & path {
+        stroke: #177ee6;
+      }
+    }
+
+    & i {
+      color: #fff;
+    }
+  }
+
+  &--nav-action path {
+    stroke: #fff;
+  }
+
+  &--day-name {
+    color: #fff;
+  }
+
+  &--cell-day.-other-month- {
+    color: #fff;
+    opacity: .5;
+  }
+
+  &--cell.-focus- {
+    color: #177ee6;
+    background-color: #fff;
+  }
+
+  &--cell.-current- {
+    background-color: #fff;
+    border-radius: 100%;
+    color: #177ee6;
+
+    &.-focus- {
+      border-radius: 4px;
+    }
+  }
+
+  &--cell-month.-current- {
+    background: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+
+    &.-focus- {
+      border-radius: 4px;
+      background-color: #fff;
+      color: #177ee6;
+    }
+  }
+
+  & .datepicker--pointer {
+    display: none;
+  }
+}
+
+div.jfilestyle {
+
+  & label {
+    padding: 8px 12px 7px;
+    display: block;
+    border: none;
+    height: 100%;
+    font-weight: bold;
+    color: #297acc;
+    outline: none;
+
+    &:hover {
+      background-color: #f7f9fa;
+    }
+  }
+
+  &.jfilestyle-corner {
+    width: 100%;
+    border: 2px solid #c2c7cc;
+    border-radius: 6px;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    height: 36px;
+
+    & input:first-child {
+      width: ~"calc(100% - 70px)" !important;
+      height: 100%;
+      border: none;
+      outline: none;
+      background: transparent;
+      padding: 0 18px;
+
+      &::-webkit-input-placeholder {
+        font-style: italic;
+      }
+      &::-moz-placeholder {
+        font-style: italic;
+      }
+      &:-ms-input-placeholder {
+        font-style: italic;
+      }
+      &:-moz-placeholder {
+        font-style: italic;
+      }
+    }
+  }
+
+  & .focus-jfilestyle {
+    width: 70px;
+    outline: none;
+  }
+}
+
+.h1, .h2, .h3 {
+  margin: 0 0 32px;
+}
+
+.h1 {
+  font-size: 32px;
+  line-height: 32px;
+}
+
+.h2 {
+  font-size: 24px;
+  line-height: 24px;
+}
+
+.h3 {
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: bold;
+}
+
+.h4 {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 22px;
+}
+
+p {
+  margin: 0 0 20px;
+  line-height: 18px;
+
+  & > a {
+    font-weight: bold;
+    color: #297acc;
+    transition: .3s;
+
+    &:hover {
+      color: #3299cc;
+    }
+  }
+}
+
+.detail {
+  width: 700px;
 }
