--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,8 +1,18 @@
 doctype html
-html(lang="en")
+html(lang="ru")
   head
-    title Gulp4 Less Pug
-    link(rel='stylesheet', href='./css/main.css')
+    title Личный кабинет
+    meta(charset="UTF-8")
+    link(rel='stylesheet', href='js/vendor/jquery-ui/jquery-ui.min.css')
+    link(rel='stylesheet', href='js/vendor/datepicker/datepicker.min.css')
+    link(rel='stylesheet', href='js/vendor/jquery-filestyle/jquery-filestyle.min.css')
+    link(rel='stylesheet', href='css/main.css')
   body
     block content
+
+    script(src="js/vendor/jquery/jquery-3.2.1.min.js")
+    script(src="js/vendor/jquery-ui/jquery-ui.min.js")
+    script(src="js/vendor/datepicker/datepicker.min.js")
+    script(src="js/vendor/jquery-filestyle/jquery-filestyle.min.js")
+    script(src="js/app/main.js")
 
