--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,8 +5,36 @@ block content
   -
     var pages = [
       {
+        label: 'Главная',
+        name: 'main'
+      },
+      {
         label: 'Стайлгайд',
         name: 'style-guide'
+      },
+      {
+        label: 'Авторизация',
+        name: 'auth'
+      },
+      {
+        label: 'Регистрация',
+        name: 'reg'
+      },
+      {
+        label: 'Подтверждение пароля',
+        name: 'confirm'
+      },
+      {
+        label: 'Восстановление пароля',
+        name: 'restoring'
+      },
+      {
+        label: 'Тип пользователя',
+        name: 'type'
+      },
+      {
+        label: 'Список заявлений',
+        name: 'list'
       }
     ]
 
