--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -6,6 +6,7 @@ html(lang="ru")
     link(rel='stylesheet', href='js/vendor/jquery-ui/jquery-ui.min.css')
     link(rel='stylesheet', href='js/vendor/datepicker/datepicker.min.css')
     link(rel='stylesheet', href='js/vendor/jquery-filestyle/jquery-filestyle.min.css')
+    link(rel='stylesheet', href='js/vendor/swiper/swiper.min.css')
     link(rel='stylesheet', href='css/main.css')
   body
     block content
@@ -14,5 +15,6 @@ html(lang="ru")
     script(src="js/vendor/jquery-ui/jquery-ui.min.js")
     script(src="js/vendor/datepicker/datepicker.min.js")
     script(src="js/vendor/jquery-filestyle/jquery-filestyle.min.js")
+    script(src="js/vendor/swiper/swiper.min.js")
     script(src="js/app/main.js")
 
