--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -51,6 +51,10 @@ a {
 
 .page {
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  overflow-y: auto;
 }
 
 .wrapper {
@@ -87,11 +91,37 @@ a {
     align-items: center;
   }
 
-  &-right {
+  &-middle {
 
     & > span {
-      font-size: 18px;
+      display: block;
       color: #ff9819;
+      margin-top: 5px;
+      font-size: 16px;
+    }
+  }
+
+  &-right {
+    text-align: right;
+  }
+
+  &__links {
+    font-size: 12px;
+    margin-top: 4px;
+    line-height: 16px;
+
+    & > a {
+      text-decoration: underline;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+
+    & .delimiter {
+      color: #fff;
+      opacity: .5;
+      margin: 0 8px;
     }
   }
 }
@@ -104,14 +134,15 @@ a {
   border: none;
   background: #177ee6;
   color: #fff;
-  border-radius: 6px;
+  border-radius: 4px;
   font-weight: bold;
   box-shadow: 0 2px 2px rgba(0, 0, 0, .25);
-  padding: 13px 10px 10px;
+  padding: 12px 10px 10px;
   text-align: center;
   outline: none;
   margin: 0 5px 10px;
   transition: .3s;
+  line-height: 18px;
 
   &:hover {
     cursor: pointer;
@@ -139,13 +170,20 @@ a {
     display: inline-block;
     vertical-align: top;
     width: 300px;
-    min-height: 86px;
     margin: 0 5px 10px;
     padding-top: 24px;
     position: relative;
 
     & > .form-control:first-child {
       margin-bottom: 0;
+    }
+
+    &.desc {
+      padding-top: 0;
+    }
+
+    &.big {
+      width: 376px;
     }
   }
 
@@ -203,6 +241,10 @@ a {
       }
     }
 
+    &.valid {
+      border-color: #60bf4c;
+    }
+
     &[type="radio"] {
       display: none;
 
@@ -211,15 +253,15 @@ a {
         left: auto;
         top: auto;
         padding-left: 34px;
-        min-height: 34px;
-        display: flex;
-        align-items: center;
+        min-height: 24px;
+        display: block;
+        padding-top: 2px;
 
         &:before {
           content: '';
           position: absolute;
           left: 0;
-          top: ~"calc(50% - 12px)";
+          top: 0;
           width: 20px;
           height: 20px;
           border: 2px solid #c2c7cc;
@@ -231,7 +273,7 @@ a {
           content: '';
           position: absolute;
           left: 7px;
-          top: ~"calc(50% - 5px)";
+          top: 7px;
           width: 10px;
           height: 10px;
           background-color: #177ee6;
@@ -274,15 +316,15 @@ a {
         left: auto;
         top: auto;
         padding-left: 34px;
-        min-height: 34px;
-        display: flex;
-        align-items: center;
+        min-height: 24px;
+        display: block;
+        padding-top: 2px;
 
         &:before {
           content: '';
           position: absolute;
           left: 0;
-          top: ~"calc(50% - 12px)";
+          top: 0;
           width: 20px;
           height: 20px;
           border: 2px solid #c2c7cc;
@@ -294,7 +336,7 @@ a {
           content: '';
           position: absolute;
           left: 5px;
-          top: ~"calc(50% - 7px)";
+          top: 5px;
           width: 14px;
           height: 14px;
           background: data-uri('../images/svg/check.svg') no-repeat center;
@@ -338,7 +380,7 @@ a {
         font-style: italic;
       }
 
-      &[disabled] ~ .jfilestyle.jfilestyle-corner  {
+      &[disabled] ~ .jfilestyle.jfilestyle-corner {
         background-color: #e1e3e6;
 
         & .focus-jfilestyle label {
@@ -443,6 +485,13 @@ a {
         }
       }
     }
+  }
+
+  &-line {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+    line-height: 18px;
   }
 }
 
@@ -696,6 +745,7 @@ div.jfilestyle {
 
 .h1, .h2, .h3 {
   margin: 0 0 32px;
+  font-weight: normal;
 }
 
 .h1 {
@@ -712,6 +762,10 @@ div.jfilestyle {
   font-size: 18px;
   line-height: 18px;
   font-weight: bold;
+
+  &.small {
+    margin-bottom: 20px;
+  }
 }
 
 .h4 {
@@ -735,6 +789,732 @@ p {
   }
 }
 
+.link {
+  font-weight: bold;
+  color: #297acc;
+  transition: .3s;
+
+  &:hover {
+    color: #3299cc;
+  }
+}
+
+.delimiter {
+  color: #999;
+  margin: 0 10px;
+}
+
 .detail {
   width: 700px;
+
+  & ol, & ul {
+    padding: 0;
+    margin: 0 0 40px 0;
+    list-style-type: none;
+
+    & li {
+      margin-bottom: 10px;
+      position: relative;
+      padding-left: 28px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: ~"calc(50% - 3px)";
+        width: 6px;
+        height: 6px;
+        background-color: #ff7f00;
+        border-radius: 100%;
+      }
+    }
+  }
+}
+
+.desc {
+  color: #999;
+}
+
+.auth {
+  display: flex;
+  justify-content: space-between;
+
+  &-block {
+    width: 40%;
+
+    & > .form-control {
+
+      & > span {
+        opacity: 1;
+        color: #999;
+        font-style: italic;
+        margin-top: 5px;
+        line-height: 18px;
+      }
+    }
+
+    & > .form-control, & > .button {
+      width: 100%;
+      margin: 0 0 20px;
+    }
+
+    &:last-child {
+      padding-top: 24px;
+    }
+  }
+
+  &-line {
+    width: 2px;
+    position: relative;
+    background-color: #ebf0f2;
+
+    &:after {
+      content: 'или';
+      position: absolute;
+      left: ~"calc(50% - 20px)";
+      top: ~"calc(50% - 14px)";
+      width: 40px;
+      height: 28px;
+      color: #999;
+      font-style: italic;
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+
+  &-right {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  & > .form-control {
+    margin: 0;
+  }
+
+  &-start {
+    display: flex;
+
+    & > .form-control {
+      width: auto;
+      margin-right: 20px;
+      margin-left: 0;
+      padding-top: 0;
+    }
+  }
+}
+
+.process {
+  margin-top: 40px;
+  background-color: #e6ecf2;
+  padding: 40px 0;
+
+  &-block {
+    margin: 0;
+    list-style-type: none;
+    counter-reset: item;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    & li {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 220px;
+      height: 100px;
+      border-radius: 6px;
+      background-color: #fff;
+      position: relative;
+      margin-bottom: 38px;
+      text-align: center;
+      padding: 0 20px;
+      line-height: 18px;
+
+      &:before {
+        content: counter(item);
+        counter-increment: item;
+        position: absolute;
+        left: ~"calc(50% - 14px)";
+        top: -14px;
+        width: 28px;
+        height: 28px;
+        color: #fff;
+        border: 4px solid #e6ecf2;
+        border-radius: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #177ee6;
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+.info {
+  color: #24aef2;
+  font-style: italic;
+  padding-left: 32px;
+  position: relative;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+
+  &:before {
+    content: 'i';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 24px;
+    height: 24px;
+    background-color: #24aef2;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    font-style: normal;
+    font-family: cursive;
+  }
+
+  &.warning {
+    color: #f25618;
+
+    &:before {
+      background-color: #f25618;
+    }
+  }
+}
+
+.notice {
+  width: 980px;
+  margin: 0 auto 20px;
+  padding: 23px 52px 22px 20px;
+  position: relative;
+  background-color: #f25730;
+  border-radius: 4px;
+  color: #fff;
+
+  & > a {
+    text-decoration: underline;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+
+.close {
+  display: block;
+  width: 52px;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: data-uri('../images/svg/close.svg') no-repeat center;
+  background-size: 12px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.display-none {
+  display: none;
+
+  &.show {
+    display: block;
+  }
+}
+
+.tabs {
+  position: relative;
+
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #e1e3e6;
+    z-index: 1;
+  }
+
+  &__item {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 18px;
+    line-height: 18px;
+    color: #999;
+    border: none;
+    outline: none;
+    background: transparent;
+    font-weight: bold;
+    position: relative;
+    padding: 15px 0;
+    margin-left: 20px;
+    transition: .3s;
+
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 4px;
+      background-color: #ff7f00;
+      opacity: 0;
+      transition: .3s;
+      z-index: 2;
+    }
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &.active {
+      color: #ff7f00;
+
+      &:after {
+        opacity: 1;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.side {
+  display: flex;
+  justify-content: space-between;
+
+  &-left {
+    width: ~"calc(100% - 239px)";
+  }
+
+  &-right {
+    width: 220px;
+    padding-top: 24px;
+
+    & > .button {
+      width: 100%;
+      margin: 0;
+      height: auto;
+    }
+  }
+
+  &bar {
+    width: ~"calc(100% - 4px)";
+    border: 4px solid #f2f2f2;
+    padding: 12px 0;
+    margin-bottom: 20px;
+
+    &__item {
+      display: block;
+      padding: 14px 16px;
+      font-weight: bold;
+      position: relative;
+
+      &.exit {
+
+        &:before {
+          content: '';
+          position: absolute;
+          left: 16px;
+          top: 0;
+          width: 180px;
+          height: 1px;
+          background-color: #e5e5e5;
+        }
+      }
+    }
+  }
+}
+
+span.sidebar__item {
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: -4px;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    background-color: #ff7f00;
+  }
+}
+
+a.sidebar__item {
+  transition: .3s;
+
+  &:hover {
+    color: #ff7f00;
+  }
+}
+
+.line {
+  padding: 24px 0 23px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #f2f2f2;
+  line-height: 18px;
+
+  &.head {
+    font-weight: bold;
+    border-bottom-width: 2px;
+  }
+
+  &__item {
+
+    &:first-child {
+      width: 90px;
+    }
+
+    &:nth-child(2) {
+      width: 230px;
+    }
+
+    &:last-child {
+      width: 215px;
+    }
+  }
+}
+
+.js-target {
+  animation: fadein 1s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* -------------------------------------------------------------------------- */
+#footer-center {
+  width: 980px;
+  margin: auto;
+}
+
+#columns {
+  width: 100%;
+  position: relative;
+  padding-bottom: 300px;
+
+  zoom: 1;
+}
+
+#mainbar {
+  width: 100%;
+  float: left;
+}
+
+#content {
+  min-height: 20px;
+}
+
+.one-col {
+  margin: 0;
+  padding: 0 20px;
+}
+
+.two-col {
+  margin: 0 0 0 320px;
+  padding: 0 20px;
+}
+
+#left-sidebar {
+  float: left;
+  margin-left: -100%;
+  width: 240px;
+  padding: 68px 60px 0 20px;
+}
+
+#footer {
+  margin-top: auto;
+  font-size: 11px;
+  line-height: 14px;
+  overflow: hidden;
+  min-width: 980px;
+  position: relative;
+  background-color: #d5dadc;
+  border-top: 1px solid #b8c1c4;
+
+  & a {
+    color: #014593;
+    text-decoration: underline;
+
+    &:hover {
+      color: #333;
+      text-decoration: none;
+    }
+  }
+}
+
+#footer-center {
+  position: relative;
+}
+
+.footer-center-inner {
+  padding: 22px 20px 0 20px;
+}
+
+.footer-links {
+  border-bottom: 1px solid #fff;
+  padding-bottom: 20px;
+  position: relative;
+  zoom: 1;
+}
+
+.footer-links-list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  margin: 0 -10px;
+  display: inline-block;
+
+}
+
+.footer-links-list li {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  float: left;
+}
+
+.footer-links-list a {
+  position: relative;
+  display: inline-block;
+  width: 140px;
+  text-decoration: none !important;
+  padding: 0 10px;
+}
+
+.footer-links-list a img {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.footer-links-list a:hover {
+  color: #000 !important;
+}
+
+.footer-actions {
+  width: 100%;
+  height: 75px;
+}
+
+.footer-actions-copy {
+  width: 420px;
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+
+  & > div {
+    width: ~"calc(100% - 81px)";
+  }
+}
+
+.footer-actions-mail {
+  width: 140px;
+  padding-right: 20px;
+}
+
+.footer-actions-icons {
+  width: 120px;
+  padding-right: 20px;
+}
+
+.footer-icons-list {
+  padding: 0;
+  margin: 0 0 0 -5px;
+  list-style-type: none;
+}
+
+.footer-icons-list li {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  float: left;
+}
+
+.footer-icons-list a {
+  position: relative;
+  display: inline-block;
+  padding: 6px;
+}
+
+.footer-icons-list a img {
+  display: block;
+}
+
+.footer-actions-search {
+  width: 160px;
+}
+
+.search-form {
+  position: relative;
+}
+
+.placeholder {
+  position: relative;
+  _zoom: 1;
+}
+
+.search-form-placeholder {
+  width: 130px;
+  border-right: none;
+  height: 26px;
+  background: #fff;
+}
+
+.placeholder label {
+  display: block;
+  color: #2b404a;
+}
+
+.input-text {
+  display: block;
+  margin: 0;
+  border: none;
+  position: relative;
+  background: none;
+  font-family: Arial, serif;
+  outline: none;
+}
+
+.search-form-placeholder .input-text {
+  width: 109px;
+  height: 26px;
+  padding: 0 10px;
+  _height: 24px;
+  _line-height: 24px;
+}
+
+.placeholder label {
+  position: absolute;
+  top: 6px;
+  left: 10px;
+  cursor: text;
+}
+
+.hide {
+  left: -9999em !important;
+}
+
+.search-form-submit {
+  position: relative;
+  top: 2px;
+  left: -5px;
+  width: 33px;
+  height: 28px;
+  background: url("../images/search-button.gif") left top no-repeat;
+  cursor: pointer;
+  line-height: 26px;
+  border: none;
+  outline: none;
+}
+
+.slider {
+  width: 1000px;
+  position: relative;
+}
+
+.slider__body {
+  position: relative;
+  width: 970px;
+  margin: 0 auto;
+
+  & ~ .swiper-button-next {
+    right: -40px;
+  }
+
+  & ~ .swiper-button-prev {
+    left: -40px;
+  }
+
+  & ~ .swiper-button-next,
+  & ~ .swiper-button-prev {
+    top: ~"calc(50% - 36px)";
+  }
+}
+
+.slider__list {
+  text-align: center;
+  margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
+}
+
+.slider__i {
+  text-align: center;
+  width: 161px;
+  height: 119px;
+  margin: 0;
+  float: left;
+  position: relative;
+}
+
+.slider__i-a {
+  position: relative;
+  display: block;
+  padding: 0 5px;
+  text-decoration: none;
+  line-height: 1.2;
+}
+
+.slider__i-img-wrap {
+  display: inline-block;
 }
