--- a/src/views/style-guide.pug
+++ b/src/views/style-guide.pug
@@ -154,3 +154,72 @@ block content
               Сверхновая вертикально растягивает объект. Излучение переворачивает вихревой
               электрон. Излучение перпендикулярно.
 
+        .block
+          .form-block
+            label(for="input-10").form__label Input Default
+            input(type="text", id="input-10").form__input
+          .form-block
+            label(for="input-11").form__label Input Default Input Default Input Default Input Default Input Default
+            input(type="text", id="input-11").form__input
+
+        .block
+          .form-block
+            label(for="select-3").form__label Select Default
+            select(id="select-3").form__select.js-select
+              option(value="1") Москва
+              option(value="2") Санкт-Петербург
+              option(value="3") Екатеринбург
+              option(value="4") Омск
+          .form-block
+            label(for="select-4").form__label Select Default Select Default Select Default Select Default Select Default
+            select(id="select-4").form__select.js-select
+              option(value="1") Москва
+              option(value="2") Санкт-Петербург
+              option(value="3") Екатеринбург
+              option(value="4") Омск
+
+        .block
+          .form-block
+            label(for="date-3").form__label Calendar Default
+            input(type="text", id="date-3", readonly).form__input.calendar.js-calendar
+            i.calendar-icon
+          .form-block
+            label(for="date-4").form__label Calendar Default Calendar Default Calendar Default Calendar Default
+            input(type="text", id="date-4", readonly).form__input.calendar.js-calendar
+            i.calendar-icon
+
+        .block
+          .form-block
+            button(type="button").button Button
+          .form-block
+            a(href="#").button Link
+
+        .block
+          .form-block.form-line
+            input(type="radio", name="radio-1", id="radio-10", checked).form__input
+            label(for="radio-10").form__label Radio Default
+          .form-block.form-line
+            input(type="radio", name="radio-1", id="radio-11").form__input
+            label(for="radio-11").form__label Radio Default Radio Default Radio Default Radio Default Radio Default
+          .form-block.form-line
+            input(type="checkbox", name="check", id="check-10", checked).form__input
+            label(for="check-10").form__label Checkbox Default
+          .form-block.form-line
+              input(type="checkbox", name="check", id="check-11").form__input
+              label(for="check-11").form__label Checkbox Default Checkbox Default Checkbox Default Checkbox Default
+
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
+        br
