--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -169,14 +169,14 @@ a {
   &-block {
     margin-bottom: 16px;
     display: flex;
+    align-items: center;
     position: relative;
     line-height: 16px;
 
     & .form__label {
       position: static;
-      width: 200px;
-      padding-top: 10px;
-      margin-right: 10px;
+      width: 500px;
+      margin-right: 20px;
     }
 
     & .calendar-icon {
