--- a/src/views/style-guide.pug
+++ b/src/views/style-guide.pug
@@ -157,9 +157,11 @@ block content
         .block
           .form-block
             label(for="input-10").form__label Input Default
+              i.req
             input(type="text", id="input-10").form__input
           .form-block
             label(for="input-11").form__label Input Default Input Default Input Default Input Default Input Default
+              i.req
             input(type="text", id="input-11").form__input
 
         .block
@@ -207,6 +209,11 @@ block content
           .form-block.form-line
               input(type="checkbox", name="check", id="check-11").form__input
               label(for="check-11").form__label Checkbox Default Checkbox Default Checkbox Default Checkbox Default
+
+          .block
+            .form-block
+              label(for="textarea").form__label Textarea Default Textarea Default Textarea Default Textarea Default
+              textarea(id="textarea").form__textarea
 
         br
         br
