--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -191,6 +191,16 @@ a {
     &.form-line .form__label {
       width: 100%;
     }
+
+    & .form__input {
+
+      &[type="checkbox"], &[type="radio"] {
+
+        & + .form__label {
+          margin-right: 0;
+        }
+      }
+    }
   }
 
   &-control {
@@ -219,6 +229,50 @@ a {
     position: absolute;
     left: 0;
     top: 0;
+  }
+
+  &__textarea {
+    width: 100%;
+    height: 100px;
+    display: block;
+    border: 2px solid #c2c7cc;
+    border-radius: 6px;
+    background: #fff;
+    padding: 12px 18px;
+    outline: none;
+    transition: .3s;
+
+    &:focus {
+      border-color: #177ee6;
+    }
+
+    &:hover {
+      background-color: #f7f9fa;
+    }
+
+    &[disabled] {
+      background-color: #e1e3e6;
+
+      &:hover {
+        cursor: default;
+      }
+
+      & + .form__label {
+        color: #999;
+      }
+    }
+
+    &.err {
+      border-color: #f25618;
+
+      & ~ span {
+        opacity: 1;
+      }
+    }
+
+    &.valid {
+      border-color: #60bf4c;
+    }
   }
 
   &__input {
@@ -1218,6 +1272,17 @@ a.sidebar__item {
       width: 215px;
     }
   }
+}
+
+.req {
+  color: #f25618;
+  font-style: normal;
+  font-size: 16px;
+  margin: 0 5px;
+
+   &:after {
+     content: '*';
+   }
 }
 
 .js-target {
