--- a/src/views/style-guide.pug
+++ b/src/views/style-guide.pug
@@ -197,36 +197,34 @@ block content
             a(href="#").button Link
 
         .block
-          .form-block.form-line
-            input(type="radio", name="radio-1", id="radio-10", checked).form__input
-            label(for="radio-10").form__label Radio Default
-          .form-block.form-line
-            input(type="radio", name="radio-1", id="radio-11").form__input
-            label(for="radio-11").form__label Radio Default Radio Default Radio Default Radio Default Radio Default
-          .form-block.form-line
-            input(type="checkbox", name="check", id="check-10", checked).form__input
-            label(for="check-10").form__label Checkbox Default
-          .form-block.form-line
-              input(type="checkbox", name="check", id="check-11").form__input
-              label(for="check-11").form__label Checkbox Default Checkbox Default Checkbox Default Checkbox Default
+          .form-block
+            label.form__label Документ
+            .right
+              .form-line
+                input(type="radio", name="radio-1", id="radio-12", checked).form__input
+                label(for="radio-12").form__label Radio Default
+              .form-line
+                input(type="radio", name="radio-1", id="radio-13").form__input
+                label(for="radio-13").form__label Radio Default Radio Default Radio Default Radio Default Radio Default
+              form-line
+                input(type="radio", name="radio-1", id="radio-14").form__input
+                label(for="radio-14").form__label Radio Default
 
-          .block
-            .form-block
-              label(for="textarea").form__label Textarea Default Textarea Default Textarea Default Textarea Default
-              textarea(id="textarea").form__textarea
+        .block
+          .form-block
+            label.form__label Документ
+            .right
+              .form-block.form-line
+                input(type="checkbox", name="check", id="check-10", checked).form__input
+                label(for="check-10").form__label Checkbox Default
+              .form-block.form-line
+                input(type="checkbox", name="check", id="check-11").form__input
+                label(for="check-11").form__label Checkbox Default Checkbox Default Checkbox Default Checkbox Default
+              .form-block.form-line
+                input(type="checkbox", name="check", id="check-12").form__input
+                label(for="check-12").form__label Checkbox Default
 
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
-        br
+        .block
+          .form-block
+            label(for="textarea").form__label Textarea Default Textarea Default Textarea Default Textarea Default
+            textarea(id="textarea").form__textarea
