--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1058,6 +1058,14 @@ p {
       padding-top: 0;
     }
   }
+
+  &.right {
+    justify-content: space-around;
+
+    & .form-line .form__label {
+      width: auto;
+    }
+  }
 }
 
 .process {
