--- a/src/views/style-guide.pug
+++ b/src/views/style-guide.pug
@@ -200,16 +200,16 @@ block content
         .block
           .form-block
             label.form__label Документ
-            .right
+            .right.flex
               .form-line
                 input(type="radio", name="radio-1", id="radio-12", checked).form__input
-                label(for="radio-12").form__label Radio Default
+                label(for="radio-12").form__label I
               .form-line
                 input(type="radio", name="radio-1", id="radio-13").form__input
-                label(for="radio-13").form__label Radio Default Radio Default Radio Default Radio Default Radio Default
-              form-line
+                label(for="radio-13").form__label II
+              .form-line
                 input(type="radio", name="radio-1", id="radio-14").form__input
-                label(for="radio-14").form__label Radio Default
+                label(for="radio-14").form__label III
 
         .block
           .form-block
