--- a/src/views/style-guide.pug
+++ b/src/views/style-guide.pug
@@ -163,16 +163,17 @@ block content
             label(for="input-11").form__label Input Default Input Default Input Default Input Default Input Default
               i.req
             input(type="text", id="input-11").form__input.err
-            span Ошибка Ошибка Ошибка Ошибка Ошибка Ошибка Ошибка Ошибка
+            span.err-mess Ошибка Ошибка Ошибка Ошибка Ошибка Ошибка Ошибка Ошибка
 
         .block
           .form-block
             label(for="select-3").form__label Select Default
-            select(id="select-3").form__select.js-select
+            select(id="select-3").form__select.js-select.err
               option(value="1") Москва
               option(value="2") Санкт-Петербург
               option(value="3") Екатеринбург
               option(value="4") Омск
+            span.err-mess Ошибка
           .form-block
             label(for="select-4").form__label Select Default Select Default Select Default Select Default Select Default
             select(id="select-4").form__select.js-select
