--- a/src/views/reg.pug
+++ b/src/views/reg.pug
@@ -44,7 +44,7 @@ block content
                   img(src="images/captcha.jpg")
             .form-control
               .form-line
-                input(type="checkbox", name="check", id="check-1").form__input
+                input(type="checkbox", name="check", id="check-1").form__input.err
                 label(for="check-1").form__label.
                   Подтверждаю ознакомленность с положениями Федерального закона РФ от 27.07.2006
                   №152-ФЗ «О персональных данных», права и обязанности в области защиты персональных
