--- a/src/views/style-guide.pug
+++ b/src/views/style-guide.pug
@@ -250,6 +250,17 @@ block content
           button(type="button").button.add Добавить
 
         .block
+          .form-block.with-close
+            label(for="input-22").form__label Input Default
+            input(type="text", id="input-22").form__input
+            button(type="button").button.remove
+          .form-block.with-close
+            label(for="input-23").form__label Input Default
+            input(type="text", id="input-23").form__input
+            button(type="button").button.remove
+          button(type="button").button.add Добавить
+
+        .block
           h4.h4 Этап 1
             button(type="button").button.remove
         .block
