--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -35,6 +35,10 @@ block content
       {
         label: 'Список заявлений',
         name: 'list'
+      },
+      {
+        label: 'Форма обсуждения',
+        name: 'form'
       }
     ]
 
