--- a/src/views/list.pug
+++ b/src/views/list.pug
@@ -177,6 +177,6 @@ block content
                     td
                       input(type="submit", id="input-name", value="").search-form-submit
             td.footer-actions-search Техническая поддержка – <br> <a href="http://ugraweb.ru" target="_blank">
-              | Югорские интернет решения</a
+              | Югорские интернет решения</a>
 
 
