--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -39,6 +39,10 @@ block content
       {
         label: 'Форма обсуждения',
         name: 'form'
+      },
+      {
+        label: 'Детальная страница',
+        name: 'detail'
       }
     ]
 
