--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -8,6 +8,7 @@ html(lang="ru")
     link(rel='stylesheet', href='js/vendor/jquery-filestyle/jquery-filestyle.min.css')
     link(rel='stylesheet', href='js/vendor/swiper/swiper.min.css')
     link(rel='stylesheet', href='js/vendor/fancybox/jquery.fancybox.min.css')
+    link(rel='stylesheet', href='js/vendor/jBox/jBox.css')
     link(rel='stylesheet', href='css/main.css')
   body
     block content
@@ -18,5 +19,6 @@ html(lang="ru")
     script(src="js/vendor/jquery-filestyle/jquery-filestyle.min.js")
     script(src="js/vendor/swiper/swiper.min.js")
     script(src="js/vendor/fancybox/jquery.fancybox.min.js")
+    script(src="js/vendor/jBox/jBox.min.js")
     script(src="js/app/main.js")
 
